force-app/main/default/objects/NOI_to_Submit__c/NOI_to_Submit__c.object-meta.xml
<CustomObject>
    <label>Notice of Intention to Submit</label>
    <nameField>
        <displayFormat>NOI-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notice of Intentions to Submit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>