force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Additional_deatils_help_text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Additional_deatils_help_text__c</fullName>
    <defaultValue>&quot;Please provide a list of all the separate components that will be submitted to examiners and the date they will be submitted (add specific text where required).&quot;</defaultValue>
    <label>Additional details help text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>