force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Alternate_supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Alternate_supervisor__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Alternate_Supervisor__r.I_RS_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Co-supervisor who has been nominated to act as approver if the principal supervisor is unavailable</inlineHelpText>
    <label>Alternate supervisor</label>
    <type>Text</type>
</CustomField>