force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Anticipated_submission_date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Anticipated_submission_date__c</fullName>
    <inlineHelpText>Anticipated thesis / exegesis submission date</inlineHelpText>
    <label>Anticipated submission date</label>
    <type>Date</type>
</CustomField>