force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Certified_by_GR__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Certified_by_GR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree</label>
    <type>Checkbox</type>
</CustomField>