force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I confirm that this information is true</label>
    <type>Checkbox</type>
</CustomField>