force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_DEC_Controlled__c.field-meta.xml
<CustomField>
    <fullName>I_RS_DEC_Controlled__c</fullName>
    <label>Contains potentially controlled material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>