force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_DGR_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_DGR_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DGR User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notice_of_Intentions_to_Submit_DGR</relationshipName>
    <type>Lookup</type>
</CustomField>