force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Dummy_Field_Approval__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Dummy_Field_Approval__c</fullName>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-</label>
    <type>Text</type>
</CustomField>