force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Expected_Work_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Expected_Work_Submission_Date__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Expected_Work_Submission_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date candidate is expected to submit their thesis by, as per the Graduate Research Candidature Policy.</inlineHelpText>
    <label>Expected Work Submission Date</label>
    <type>Date</type>
</CustomField>