force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Form_Details_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Form_Details_Help_Text__c</fullName>
    <defaultValue>&quot;This is a summary view. To view the full NOI form, click on the form ID link below.&quot;</defaultValue>
    <label>Form Details Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>