force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Item_to_be_submitted_3__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Item_to_be_submitted_3__c</fullName>
    <defaultValue>&quot;Exhibition or performance&quot;</defaultValue>
    <inlineHelpText>Update item description as appropriate</inlineHelpText>
    <label>Item to be submitted</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>