force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_New_Notice_of_Intention_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>I_RS_New_Notice_of_Intention_to_Submit__c</fullName>
    <defaultValue>&quot;A new Notice of Intention to Submit form will be created. You will be able to find it under the &apos;Notice of Intention to Submit&apos; section. Click Save to confirm.&quot;</defaultValue>
    <label>New Notice of Intention to Submit</label>
    <type>TextArea</type>
</CustomField>