force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Sanctions__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Sanctions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>You must have paid any money you owe to the University before you can graduate.</inlineHelpText>
    <label>Fee sanction</label>
    <type>Checkbox</type>
</CustomField>