force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_School__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_School__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Candidate&apos;s School, determined from principal supervisor’s research org unit</inlineHelpText>
    <label>School</label>
    <type>Text</type>
</CustomField>