force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Student_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Full_Name__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Candidate_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Full Name</label>
    <type>Text</type>
</CustomField>