force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Id__c</fullName>
    <formula>I_RS_Graduate_Research_Examination__r.I_RS_Student_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Id</label>
    <type>Text</type>
</CustomField>