force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Submission_date_3__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submission_date_3__c</fullName>
    <inlineHelpText>The date you anticipate submitting the item. For events, use the first day of the performance / exhibition.</inlineHelpText>
    <label>Submission date</label>
    <type>Date</type>
</CustomField>