force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Submission_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Submission_Help_Text__c</fullName>
    <defaultValue>&quot;The following section applies to practice-based degrees only.&quot;</defaultValue>
    <label>Submission Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>