force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Supervisor_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User reference to the supervisor approver</description>
    <label>Supervisor Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notice_of_Intentions_to_Submit_Super</relationshipName>
    <type>Lookup</type>
</CustomField>