force-app/main/default/objects/NOI_to_Submit__c/fields/I_RS_Thesis_abstract__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Thesis_abstract__c</fullName>
    <inlineHelpText>Please provide a 300-word abstract of your thesis / combined works to be sent to prospective examiners.</inlineHelpText>
    <label>Thesis abstract</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>