force-app/main/default/objects/NOI_to_Submit__c/fields/SDGR_Approver__c.field-meta.xml
<CustomField>
    <fullName>SDGR_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User reference to SDGR approvar from GRE</description>
    <label>SDGR Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notice_of_Intentions_to_Submit1</relationshipName>
    <type>Lookup</type>
</CustomField>