force-app/main/default/objects/NOI_to_Submit__c/validationRules/Lock_Record_for_researchers.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_for_researchers</fullName>
    <active>true</active>
    <errorConditionFormula>$User.I_RS_Is_Researcher_User__c = &apos;1&apos; &amp;&amp; 
ISCHANGED(I_RS_Status__c) &amp;&amp;
TEXT(PRIORVALUE(I_RS_Status__c)) = &apos;Draft&apos; &amp;&amp; 
TEXT(I_RS_Status__c) &lt;&gt; &apos;GRS Processing&apos;</errorConditionFormula>
    <errorMessage>You do not have permission to change to this status. Please contact GRS.</errorMessage>
</ValidationRule>