force-app/main/default/objects/NOI_to_Submit__c/validationRules/Validate_certified_by_GR.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_certified_by_GR</fullName>
    <active>true</active>
    <description>When Student Changes the status from Draft to GRS Processing, Certified by GR should be &quot;checked&quot;</description>
    <errorConditionFormula>AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
($User.Id =   I_RS_Student_User__c ),
( ISCHANGED(I_RS_Status__c) ),
(TEXT(I_RS_Status__c)  &lt;&gt;  &apos;Draft&apos;),
(NOT( I_RS_Certified_by_GR__c ))
)</errorConditionFormula>
    <errorMessage>Before you can submit to GRS, please agree to the candidate declaration.</errorMessage>
</ValidationRule>