force-app/main/default/objects/NOI_to_Submit__c/validationRules/Validate_Closure_of_NOI.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Closure_of_NOI</fullName>
    <active>true</active>
    <description>Only GRS users can close the NOI</description>
    <errorConditionFormula>AND(

(NOT($UserRole.DeveloperName = &apos;GRS&apos;)),
($Profile.Name &lt;&gt; &apos;System Administrator&apos;),


(TEXT( I_RS_Status__c ) = &apos;Complete&apos;)
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the status to &apos;Complete&apos;</errorMessage>
</ValidationRule>