force-app/main/default/objects/NOI_to_Submit__c/validationRules/Validate_Thesis_abstract.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Thesis_abstract</fullName>
    <active>true</active>
    <description>When Student Changes the status from Draft to GRS Processing,  Thesis abstract should be filled</description>
    <errorConditionFormula>AND(
($User.I_RS_Is_Researcher_User__c = &apos;1&apos;),
($User.Id = I_RS_Student_User__c ),
( ISCHANGED(I_RS_Status__c) ),
(TEXT(I_RS_Status__c) &lt;&gt; &apos;Draft&apos;),
( ISBLANK(I_RS_Thesis_abstract__c) )
)</errorConditionFormula>
    <errorMessage>Before you can submit to GRS, please fill in the Thesis Abstract.</errorMessage>
</ValidationRule>